syntax = "proto3";

package sale_service;

option go_package = "genproto/sale_service";

message BrPrTransaction {
    string id = 1;
    string branch_id = 2;
    string staff_id = 3;
    string product_id = 4;
    float price = 5;
    string typ = 6;
    int64 quantity = 7;
    string created_at = 8;
    string updated_at = 9;
    string deleted_at = 10;
}

message BrPrTrCreateReq {
    string branch_id = 1;
    string staff_id = 2;
    string product_id = 3;
    float price = 4;
    string typ = 5;
    int64 quantity = 6;
}

message BrPrTrCreateResp {
    string msg = 1;
}

message BrPrTrGetListReq {
    int64 page = 1;
    int64 limit = 2;
    string branch_id = 3;
    string staff_id = 4;
    string product_id = 5;
    string typ = 6;
}

message  BrPrTrGetListResp{
    repeated BrPrTransaction brPrTransactions = 1;
    int64 count = 2;
}

message BrPrTrIdReq {
    string id = 1;
}

message BrPrTrUpdateReq {
    string id = 1;
    string branch_id = 2;
    string staff_id = 3;
    string product_id = 4;
    float price = 5;
    string typ = 6;
    int64 quantity = 7;
}

message BrPrTrUpdateResp {
    string msg = 1;
}

message BrPrTrDeleteResp {
    string msg = 2;
}
